<resources>
    <string name="app_name">逗丫</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_btn_text_feeds">订阅</string>
    <string name="navigation_btn_text_party">活动</string>
    <string name="navigation_btn_text_find">发现</string>
    <string name="navigation_btn_text_mine">我的</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">搜索</string>
    <string name="action_issue">发布</string>
    <string name="action_add_to_learn">添加到学习列表</string>
    <string name="action_download">下载</string>
    <string name="action_share">分享</string>

    <string name="title_activity_user_videos">用户视频</string>
    <string name="title_activity_user_partys">用户活动</string>
    <string name="title_activity_user_interest">用户订阅</string>
    <string name="title_activity_add_follow">关注</string>

    <string name="title_activity_my_content">我的资料</string>
    <string name="title_activity_my_videos">我的视频</string>
    <string name="title_activity_learn_now_videos">正在学习</string>
    <string name="title_activity_my_partys">我的活动</string>
    <string name="title_activity_my_interest">我的订阅</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_hot_videos">热门视频</string>
    <string name="title_activity_local_videos">同城视频</string>
    <string name="title_activity_hot_interest">热门兴趣</string>
    <string name="title_activity_video_content">视频详情</string>
    <string name="title_activity_party_content">活动详情</string>
    <string name="title_activity_user_content">用户详情</string>
    <string name="title_activity_user_home">用户主页</string>
    <string name="title_activity_list">列表</string>

    <string name="video_content_tab_title_introduction">简介</string>
    <string name="vidoe_content_tab_title_tips">评论</string>
    <string name="vidoe_content_tab_title_likeness">相关</string>
</resources>
